Fix z-indexing on mobile

--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -66,3 +66,9 @@ body#gallery{
     }
   }
 }
+
+.gallery-foot{
+  p{
+    font-size: 14px;
+  }
+}
