--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -189,7 +189,10 @@ header{
       opacity: 1;
     }
     @media (max-width: $screen-sm-max){
-      position: initial;
+      position: relative;
+      right: auto;
+      top: auto;
+      z-index: 5;
       background-color: transparent;
       width: auto;
       display: block;
